change theme, add tmux shortcuts

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -20,6 +20,8 @@ bind -n M-Down select-pane -D
 
 set -g mouse on
 
+bind -n M-s setw synchronize-panes
+bind -n M-x kill-pane
 
 
 # List of plugins
