--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,8 +4,8 @@ set-option -g prefix C-d
 bind-key C-d send-prefix
 
 # split panes using | and -
-bind -n M-h split-window -h
-bind -n M-v split-window -v
+bind -n M-v split-window -h
+bind -n M-h split-window -v
 unbind '"'
 unbind %
 
