--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,23 @@
-# remap prefix from 'C-b' to 'C-a'
+# utf8 is on
+set -g utf8 on
+set -g status-utf8 on
+
+# increase scrollback buffer size
+set -g history-limit 50000
+
+# tmux messages are displayed for 4 seconds
+set -g display-time 4000
+
+# upgrade $TERM
+set -g default-terminal "screen-256color"
+
+# remap prefix from 'C-b' to 'C-d'
 unbind C-b
 set-option -g prefix C-d
 bind-key C-d send-prefix
 
 # split panes using | and -
+# inversed split so it makes sense
 bind -n M-v split-window -h
 bind -n M-h split-window -v
 unbind '"'
@@ -20,22 +34,24 @@ bind -n M-Down select-pane -D
 
 set -g mouse on
 
+# (un)sync panes without prefix
 bind -n M-s setw synchronize-panes
+
+# kill pane without prefix
 bind -n M-x kill-pane
 
+# Copy mode
+# use Ctrl+Space to select
+# use y to copy 
+bind c copy-mode
 
-# List of plugins
+# plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'jimeh/tmux-themepack'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
-set -g @themepack 'powerline/default/gray'
-
-
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'git@github.com/user/plugin'
-# set -g @plugin 'git@bitbucket.com/user/plugin'
+set -g @themepack 'basic'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
