--- a/terminator/config
+++ b/terminator/config
@@ -16,10 +16,11 @@
 [profiles]
   [[default]]
     background_darkness = 0.93
-    background_image = None
     background_type = transparent
+    cursor_color = "#aaaaaa"
     font = Hack 12
     palette = "#000000:#cc0000:#4e9a06:#c4a000:#3465a4:#75507b:#06989a:#d3d7cf:#555753:#ef2929:#8ae234:#fce94f:#729fcf:#ad7fa8:#34e2e2:#eeeeec"
     scrollback_infinite = True
+    scrollbar_position = hidden
     show_titlebar = False
     use_system_font = False
