--- a/terminator/config
+++ b/terminator/config
@@ -1,5 +1,6 @@
 [global_config]
   broadcast_default = off
+  suppress_multiple_term_dialog = True
   title_hide_sizetext = True
 [keybindings]
   close_term = <Alt>x
