--- a/terminator/config
+++ b/terminator/config
@@ -1,11 +1,24 @@
 [global_config]
   broadcast_default = off
-  suppress_multiple_term_dialog = True
   title_hide_sizetext = True
+  suppress_multiple_term_dialog = True
 [keybindings]
-  close_term = <Alt>x
   split_horiz = <Alt>h
   split_vert = <Alt>v
+  close_term = <Alt>x
+[profiles]
+  [[default]]
+    background_darkness = 0.93
+    background_type = transparent
+    cursor_color = "#aaaaaa"
+    font = Hack 12
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#000000:#cc0000:#4e9a06:#c4a000:#3465a4:#75507b:#06989a:#d3d7cf:#555753:#ef2929:#8ae234:#fce94f:#729fcf:#ad7fa8:#34e2e2:#eeeeec"
+    use_custom_command = True
+    custom_command = /bin/zsh
+    use_system_font = False
 [layouts]
   [[default]]
     [[[child1]]]
@@ -15,14 +28,3 @@
       parent = ""
       type = Window
 [plugins]
-[profiles]
-  [[default]]
-    background_darkness = 0.93
-    background_type = transparent
-    cursor_color = "#aaaaaa"
-    font = Hack 12
-    palette = "#000000:#cc0000:#4e9a06:#c4a000:#3465a4:#75507b:#06989a:#d3d7cf:#555753:#ef2929:#8ae234:#fce94f:#729fcf:#ad7fa8:#34e2e2:#eeeeec"
-    scrollback_infinite = True
-    scrollbar_position = hidden
-    show_titlebar = False
-    use_system_font = False
